--- a/assets/main.scss
+++ b/assets/main.scss
@@ -8,6 +8,21 @@ $dark-blue: hsl(235, 46%, 20%);
 $very-dark-blue: hsl(226, 43%, 10%);
 $desaturated-blue: hsl(235, 45%, 61%);
 $pale-blue: hsl(236, 100%, 87%);
+$blue: hsl(246, 80%, 60%);
+
+@mixin event-img {
+  position: relative;
+  height: 75px;
+  border-radius: 20px;
+  z-index: 0;
+}
+@mixin svg-img {
+  position: absolute;
+  right: 0;
+  top: 0px;
+  width: 65px;
+  height: auto;
+}
 
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;700&family=Hanken+Grotesk:wght@400;500;600;700;800&family=Inter:wght@100;200;300;400;500;800&family=Manrope:wght@500;800&family=Montserrat:ital,wght@0,100;0,300;0,400;0,500;1,600&family=Nunito:wght@200;300;500;700;800&family=Overpass:wght@400;700&family=Patrick+Hand&family=Plus+Jakarta+Sans:wght@500;800&family=Rubik:wght@300;400;500&family=Source+Sans+Pro:wght@300;400;600;700&display=swap");
 
@@ -20,6 +35,7 @@ $pale-blue: hsl(236, 100%, 87%);
 body {
   font-family: "Rubik", sans-serif;
   background-color: $very-dark-blue;
+  zoom: 90%;
 }
 
 .attribution {
@@ -36,44 +52,162 @@ body {
   padding-bottom: 30px;
   .user-info {
     position: relative;
-    background-color: $desaturated-blue;
+    background-color: $blue;
     border-radius: 20px;
     padding: 20px;
-    width:300px;
+    width: 300px;
+    height: 400px;
     z-index: 1;
     .users-img {
-        width: 100px;
-        border: 3px solid #fff;
-        border-radius: 50%;
-      }
-      p{
-        margin-top: 20px;
-        font-size: 14px;
-        color: $pale-blue;
-      }
-      h1 {
-        color: #fff;
-        font-size: 50px;
-        font-weight: 100;
-    margin-bottom: 50px;
-      }
+      width: 100px;
+      border: 3px solid #fff;
+      border-radius: 50%;
+    }
+    p {
+      margin-top: 30px;
+      font-size: 14px;
+      color: $pale-blue;
+    }
+    h1 {
+      color: #fff;
+      font-size: 50px;
+      font-weight: 100;
+      margin-top: 20px;
+    }
   }
-  .time{
+  .time {
     position: relative;
     background-color: $dark-blue;
     padding: 20px;
-    width:300px;
+    width: 300px;
+    height: 205px;
     margin-top: -10px;
     z-index: 0;
     border-bottom-left-radius: 20px;
     border-bottom-right-radius: 20px;
     .btn {
-        display: block;
-        color: $pale-blue;
-        font-size: 18px;
-        &:hover {
-            color: #fff;
-        }
+      border: none;
+      outline: none;;
+      display: block;
+      color: $pale-blue;
+      font-size: 18px;
+      padding-top: 20px;
+      transition: 0.4s;
+      &:hover {
+        color: #fff;
+      }
+    }
+  }
+  .event-img {
+    @include event-img();
+    background-color: $light-red;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-img-2 {
+    @include event-img();
+    background-color: $soft-blue;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-img-3 {
+    @include event-img();
+    background-color: $light-red-2;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-img-4 {
+    @include event-img();
+    background-color: $lime-green;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-img-5 {
+    @include event-img();
+    background-color: $violet;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-img-6 {
+    @include event-img();
+    background-color: $soft-orange;
+    img {
+      @include svg-img();
+    }
+  }
+
+  .event-desc {
+    position: relative;
+    background-color: $dark-blue;
+    border-radius: 20px;
+    padding: 20px;
+    padding-top: 40px;
+    color: #fff;
+    z-index: 1;
+    margin-top: -40px;
+    transition: 0.4s;
+    .title {
+      font-size: 25px;
+    }
+    .hour {
+      font-size: 65px;
+      font-weight: 100;
+    }
+    .last-hour {
+      color: $pale-blue;
+    }
+    .dot {
+      cursor: pointer;
+      position: absolute;
+      top: 28px;
+      right: 20px;
+      padding: 10px;
+      font-weight: 700;
+      color: $pale-blue;
+    }
+    &:hover {
+      background-color: $desaturated-blue;
+      .dot {
+        color: #fff;
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .user-info {
+    width: 100% !important;
+    height: auto !important;
+  }
+  .time {
+    display: flex !important;
+    width: 100% !important;
+    height: auto !important;
+    margin-bottom: 20px;
+    .btn-div {
+      display: flex !important;
+      margin: auto;
+    }
+  }
+  .col-lg-4 {
+    margin-top: 10px !important;
+    .hour-div {
+      display: flex !important;
+      justify-content: space-between;
+      .last-hour {
+        display: flex !important;
+        align-items: center;
+      }
     }
   }
 }
